Fixed hr alignment in Edge

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -56,6 +56,7 @@ hr {
 	height: 0.2em;
 	width: 15%;
 	margin: 3em 0 0 0;
+	text-align: left;
 	border: none;
 	background-color: #c4c4c4;
 }
